@@ -255,7 +255,6 @@ src_configure() {
 	myconf+="
 		--disable-svga
 		--disable-arts
-		--disable-kai
 		--disable-tremor
 		$(use_enable network networking)
 		$(use_enable joystick)
@@ -516,8 +515,9 @@ src_configure() {
 	fi
 
 	./configure \
-		--cc=$(tc-getCC) \
-		--host-cc=$(tc-getBUILD_CC) \
+		--cc="$(tc-getCC)" \
+		--host-cc="$(tc-getBUILD_CC)" \
+		--pkg-config="$(tc-getPKG_CONFIG)" \
 		--prefix="${EPREFIX}"/usr \
 		--bindir="${EPREFIX}"/usr/bin \
 		--libdir="${EPREFIX}"/usr/$(get_libdir) \
